// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(Paginator)
    itemCountPerPage={20}
    onPageChange={[Function]}
    selectedPage={1}
    totalCount={2234}
  >
    <Paginator
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      itemCountPerPage={20}
      onPageChange={[Function]}
      selectedPage={1}
      totalCount={2234}
    >
      <ResponsiveElement
        onChange={[Function]}
        responsiveTo="parent"
      >
        <nav
          aria-label="pagination"
          className="paginator orion-fusion-theme"
        >
          <VisuallyHiddenText
            aria-live="polite"
            aria-relevant="additions text"
            text=""
          >
            <span
              aria-live="polite"
              aria-relevant="additions text"
              className="visually-hidden-text"
            />
          </VisuallyHiddenText>
          <div>
            Terra.paginator.pageIndex
          </div>
          <ul
            className="list"
          >
            <li>
              <PaginatorButton
                ariaDisabled={true}
                ariaLabel="Terra.paginator.first"
                className="nav-link left-controls is-disabled"
                disabled={true}
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={true}
                  aria-label="Terra.paginator.first"
                  className="nav-link left-controls is-disabled"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="link"
                  type="button"
                >
                  Terra.paginator.first
                </button>
              </PaginatorButton>
            </li>
            <li>
              <PaginatorButton
                ariaDisabled={true}
                ariaLabel="Terra.paginator.previous"
                className="nav-link left-controls previous is-disabled"
                disabled={true}
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={true}
                  aria-label="Terra.paginator.previous"
                  className="nav-link left-controls previous is-disabled"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="link"
                  type="button"
                >
                  <span
                    className="icon"
                  />
                  Terra.paginator.previous
                </button>
              </PaginatorButton>
            </li>
            <li>
              <PaginatorButton
                ariaDisabled={false}
                ariaLabel="Terra.paginator.next"
                className="nav-link right-controls next icon-only"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={false}
                  aria-label="Terra.paginator.next"
                  className="nav-link right-controls next icon-only"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="link"
                  type="button"
                >
                  <VisuallyHiddenText
                    text="Terra.paginator.next"
                  >
                    <span
                      className="visually-hidden-text"
                    >
                      Terra.paginator.next
                    </span>
                  </VisuallyHiddenText>
                  <span
                    className="icon"
                  />
                </button>
              </PaginatorButton>
            </li>
            <li>
              <PaginatorButton
                ariaDisabled={false}
                ariaLabel="Terra.paginator.last"
                className="nav-link right-controls"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={false}
                  aria-label="Terra.paginator.last"
                  className="nav-link right-controls"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="link"
                  type="button"
                >
                  Terra.paginator.last
                </button>
              </PaginatorButton>
            </li>
          </ul>
        </nav>
      </ResponsiveElement>
    </Paginator>
  </InjectIntl(Paginator)>
</ThemeContextProvider>
`;

exports[`Paginator should render a Controlled Paginator - Large 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <nav
    aria-label="pagination"
    className="paginator"
  >
    <VisuallyHiddenText
      aria-live="polite"
      aria-relevant="additions text"
      text=""
    />
    <ul
      className="list"
    >
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.first"
          className="nav-link left-controls is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.first
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.previous"
          className="nav-link left-controls previous is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={true}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link is-selected"
          key="pageButton_1"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          1
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_2"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          2
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_3"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          3
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_4"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          4
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_5"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          5
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_6"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          6
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_7"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          7
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_8"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          8
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_9"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          9
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_10"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          10
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.next"
          className="nav-link right-controls next"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.last"
          className="nav-link right-controls"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.last
        </PaginatorButton>
      </li>
    </ul>
  </nav>
</ResponsiveElement>
`;

exports[`Paginator should render a Controlled Paginator - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <nav
    aria-label="pagination"
    className="paginator"
  >
    <VisuallyHiddenText
      aria-live="polite"
      aria-relevant="additions text"
      text=""
    />
    <ul
      className="list"
    >
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.first"
          className="nav-link left-controls is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.first
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.previous"
          className="nav-link left-controls previous is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={true}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link is-selected"
          key="pageButton_1"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          1
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_2"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          2
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_3"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          3
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_4"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          4
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_5"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          5
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_6"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          6
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_7"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          7
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_8"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          8
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_9"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          9
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_10"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          10
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.next"
          className="nav-link right-controls next"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.last"
          className="nav-link right-controls"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.last
        </PaginatorButton>
      </li>
    </ul>
  </nav>
</ResponsiveElement>
`;

exports[`Paginator should render a Controlled Paginator with aria label set - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <nav
    aria-label="paginator_label"
    className="paginator"
  >
    <VisuallyHiddenText
      aria-live="polite"
      aria-relevant="additions text"
      text=""
    />
    <ul
      className="list"
    >
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.first"
          className="nav-link left-controls is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.first
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.previous"
          className="nav-link left-controls previous is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={true}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link is-selected"
          key="pageButton_1"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          1
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_2"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          2
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_3"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          3
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_4"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          4
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_5"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          5
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_6"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          6
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_7"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          7
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_8"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          8
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_9"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          9
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_10"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          10
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.next"
          className="nav-link right-controls next"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.last"
          className="nav-link right-controls"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.last
        </PaginatorButton>
      </li>
    </ul>
  </nav>
</ResponsiveElement>
`;

exports[`Paginator should render a Controlled Paginator with heading id set - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <nav
    aria-labelledby="paginator_header_id"
    className="paginator"
  >
    <VisuallyHiddenText
      aria-live="polite"
      aria-relevant="additions text"
      text=""
    />
    <ul
      className="list"
    >
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.first"
          className="nav-link left-controls is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.first
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={true}
          ariaLabel="Terra.paginator.previous"
          className="nav-link left-controls previous is-disabled"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={true}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link is-selected"
          key="pageButton_1"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          1
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_2"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          2
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_3"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          3
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_4"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          4
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_5"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          5
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_6"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          6
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_7"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          7
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_8"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          8
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_9"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          9
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_10"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          10
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.next"
          className="nav-link right-controls next"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.last"
          className="nav-link right-controls"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.last
        </PaginatorButton>
      </li>
    </ul>
  </nav>
</ResponsiveElement>
`;

exports[`Paginator should render a Controlled Paginator with visually hidden text 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <nav
    aria-label="pagination"
    className="paginator"
  >
    <VisuallyHiddenText
      aria-live="polite"
      aria-relevant="additions text"
      text="Terra.paginator.pageSelectedWithCount"
    />
    <ul
      className="list"
    >
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.first"
          className="nav-link left-controls"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.first
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.previous"
          className="nav-link left-controls previous"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_1"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          1
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={true}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link is-selected"
          key="pageButton_2"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          2
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_3"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          3
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_4"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          4
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_5"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          5
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_6"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          6
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_7"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          7
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_8"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          8
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_9"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          9
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaCurrent={false}
          ariaLabel="Terra.paginator.pageIndex"
          className="nav-link"
          key="pageButton_10"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          10
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.next"
          className="nav-link right-controls next"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </PaginatorButton>
      </li>
      <li>
        <PaginatorButton
          ariaDisabled={false}
          ariaLabel="Terra.paginator.last"
          className="nav-link right-controls"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Terra.paginator.last
        </PaginatorButton>
      </li>
    </ul>
  </nav>
</ResponsiveElement>
`;
